--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 body {
     margin: 0;
     min-height: 100vh;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -26,6 +26,7 @@ code {
     padding: 1em;
     display: flex;
     justify-content: space-between;
+    position: relative;
 }
 
 header,
@@ -38,11 +39,12 @@ footer {
 }
 
 .shopping-icon {
-    display: inline-block;
     position: absolute;
     /* left: 90%;
     transform: translateX(-90%); */
-    /* right: 0; */
+    right: 1em;
+    /* size: 70px; */
+    margin: auto 0;
 }
 
 .footer__copyright {
@@ -52,3 +54,5 @@ footer {
 main {
     flex: 1;
 }
+
+@import "./css/_product";
