-manage cart page; - add input hook - add custom input - manage mobx store

--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,16 @@ body {
 }
 
 a,
-h1 {
+h1,
+h2 {
     margin: 0;
     padding: 0;
+}
+
+h1,
+h2 {
+    font-size: 1.25em;
+    line-height: 1.5em;
 }
 
 code {
@@ -56,5 +63,3 @@ footer {
 main {
     flex: 1;
 }
-
-@import "./css/_product";
